fix overflow desktop

--- a/Swarnakasa ITERA/css/media.css
+++ b/Swarnakasa ITERA/css/media.css
@@ -7,6 +7,9 @@
 
 
 @media (max-width: 1000px) {
+  body{
+     overflow-x:hidden 
+  }
   .about .about-details {
     justify-content: center;
     flex-direction: column;
@@ -44,9 +47,9 @@
     position: fixed;
     left: -100%;
     top: 0;
-    background: #0e2431;
+    background: var(--navy);
     height: 100vh;
-    max-width: 400px;
+/*    max-width: 400px;*/
     width: 100%;
     padding-top: 60px;
     flex-direction: column;
@@ -63,7 +66,7 @@
     margin: 10px 0;
   }
   nav.sticky .menu a:hover {
-    color: #4070f4;
+    color: var(--yellow);
   }
   nav .navbar .media-icons {
     display: none;
@@ -110,7 +113,7 @@
     font-size: 10px;
     width: 100%!important;
     height: 1rem;
-    border-radius: 0 0 0 0;
+    border-radius: 0!important;
     padding: 1.4rem;
     margin-bottom: 1rem;
   }
